--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,2 @@
-attr==0.3.2
-attrs==22.1.0
-brotli==1.0.9
-brotlicffi==1.0.9.2
-ConfigParser==5.3.0
-cryptography==38.0.3
-Cython==0.29.32
-dl==0.1.0
-docutils==0.19
-HTMLParser==0.0.2
-ipython==8.6.0
-ipywidgets==8.0.2
-Jinja2==3.1.2
-jnius==1.1.0
-keyring==23.11.0
-lockfile==0.12.2
-numpy==1.23.4
-Pillow==9.3.0
-protobuf==4.21.9
-pyOpenSSL==22.1.0
-railroad==0.5.0
-simplejson==3.17.6
-Sphinx==5.3.0
-toml==0.10.2
-tornado==6.2
-trove_classifiers==2022.10.19
-truststore==0.5.0
-unicodedata2==15.0.0
-urllib3_secure_extra==0.1.0
-xmlrpclib==1.0.1
+colorama
+requests
